# aidbooks

./: .dockerignore  .env.example  .gitignore  README.md  justfile  plan-animation.md  plan.md
.github/workflows/: ci.yml
Vibecoding/: analytics.md  animation-feature.md  audiobook-improvements.md  deployment.md  hyperframes-integration.md  hyperframes.md  improvements.md  infra.md  instructions.md  issues.md  mcp-server.md  mold-image-generation.md  multi-queue.md  song-audiobook.md  youtube-after-publish.md  youtube-podcast.md  youtube-publishing.md  youtube-shorts.md
backend/: Cargo.toml  Dockerfile
backend/api/: Cargo.toml
backend/api/src/: app.rs  error.rs  i18n.rs  idempotency.rs  main.rs  openapi.rs  state.rs
backend/api/src/animation/: cache.rs  fast_path.rs  hwenc.rs  manim_sidecar.rs  mod.rs  planner.rs  segments.rs  sidecar.rs  spec.rs  timing.rs
backend/api/src/audio/: mod.rs
backend/api/src/auth/: claims.rs  extractor.rs  mod.rs  tokens.rs
backend/api/src/generation/: audio.rs  chapter.rs  cover.rs  manim_code.rs  mod.rs  outline.rs  paragraphs.rs  prompts.rs  song_snippets.rs  songbook.rs  style.rs  translate.rs  voices.rs
backend/api/src/handlers/: admin.rs  analytics.rs  audiobook.rs  auth.rs  catalog.rs  cover.rs  health.rs  ideas.rs  integrations.rs  jobs.rs  me.rs  mod.rs  podcasts.rs  queue.rs  songbook.rs  stream.rs  topic_templates.rs  topics.rs  ws.rs
backend/api/src/jobs/: handlers.rs  mod.rs
backend/api/src/jobs/publishers/: animate.rs  mod.rs  youtube.rs
backend/api/src/llm/: fal.rs  mod.rs  mold.rs  openrouter.rs
backend/api/src/tts/: mock.rs  mod.rs  xai.rs  xai_rest.rs
backend/api/src/youtube/: account.rs  analytics.rs  encrypt.rs  mod.rs  oauth.rs  playlist.rs  subtitles.rs  upload.rs
backend/core/: Cargo.toml
backend/core/src/: config.rs  crypto.rs  error.rs  id.rs  lib.rs
backend/core/src/domain/: audiobook.rs  generation_event.rs  job.rs  llm.rs  mod.rs  prompt.rs  user.rs  voice.rs
backend/db/: Cargo.toml
backend/db/migrations/: 0001_init.surql  0002_session.surql  0003_content.surql  0004_jobs.surql  0005_cover.surql  0006_language.surql  0007_chapter_lang.surql  0008_job_lang.surql  0009_translate_kind.surql  0010_youtube.surql  0011_chapter_art.surql  0012_topic_template.surql  0013_art_style.surql  0014_llm_meta.surql  0015_cover_llm.surql  0016_youtube_playlist.surql  0017_youtube_review.surql  0018_image_llm_pricing.surql  0019_image_llm_pricing_backfill.surql  0020_audiobook_auto_pipeline.surql  0021_audiobook_auto_pipeline_flexible.surql  0022_chapter_images.surql  0023_paragraph_illustrations.surql  0024_llm_provider_xai.surql  0025_youtube_description_footer.surql  0026_audiobook_category.surql  0027_audiobook_category_table.surql  0028_audiobook_tags.surql  0029_podcast.surql  0030_audiobook_tags_backfill.surql  0031_audiobook_short.surql  0032_animate.surql  0033_audiobook_stem.surql  0034_prompt_visual_role.surql  0035_manim_code_role.surql  0036_youtube_publish_settings.surql  0037_idea.surql  0038_multi_voice.surql  0039_youtube_like_subscribe_overlay.surql  0040_youtube_publication_overlay.surql  (+10 more)
backend/db/src/: lib.rs  migrate.rs  seed.rs  xai_voices.json
backend/db/src/prompts/: chapter_v1.md  manim_code_v1.md  outline_songbook_v1.md  outline_v1.md  paragraph_visual_v1.md  random_topic_v1.md  voice_extract_v1.md
backend/jobs/: Cargo.toml
backend/jobs/src/: handler.rs  hub.rs  lib.rs  repo.rs  runtime.rs
backend/manim/: .gitignore  Containerfile  README.md  pyproject.toml  requirements.txt
backend/manim/listenai_manim/: __init__.py  raw_scene.py  server.py  server_smoke.py  smoke.py  templates_smoke.py
backend/manim/listenai_manim/templates/: __init__.py  _base.py  axes_with_curve.py  bar_chart.py  equation_steps.py  flow_chart.py  free_body.py  function_plot.py  neural_net_layer.py  vector_field.py
backend/mcp/: Cargo.toml
backend/mcp/src/: config.rs  http_client.rs  main.rs  proto.rs  server.rs
backend/mcp/src/tools/: http.rs  meta.rs  mod.rs  ws.rs
backend/mcp/src/transport/: http.rs  stdio.rs
backend/render/: .gitignore  README.md  package-lock.json  package.json  tsconfig.check.json  tsconfig.json
backend/render/src/: cli.ts  events.ts  project.tsx  render.ts  scene.tsx  server.ts  spec.ts
backend/render/src/components/: Background.tsx  Outro.tsx  ParagraphScene.tsx  TitleCard.tsx  WaveformPulse.tsx  types.ts
backend/render/src/themes/: index.ts
backend/render/test/: run-fixture.mjs
docs/: MCP.md  mcp-connect.md
docs/animation/: render-host.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/api/: client.ts  index.ts  schema.d.ts  types.ts
frontend/src/components/: AdminLayout.tsx  AppLayout.tsx  ArtStylePicker.tsx  CopyButton.tsx  NarrationStylePanel.tsx  RenameAudiobookDialog.tsx  RequireAdmin.tsx  RequireAuth.tsx  VoicePreview.tsx
frontend/src/hooks/: useProgressSocket.ts
frontend/src/lib/: art-styles.ts  cover-llm.ts  llm-reorder.ts  useVoicePreview.ts  voices.ts
frontend/src/pages/: Analytics.tsx  BookDetail.tsx  Ideas.tsx  Library.tsx  Login.tsx  NewAudiobook.tsx  Player.tsx  Queue.tsx  Settings.tsx  Signup.tsx
frontend/src/pages/admin/: AdminCategories.tsx  AdminImageLlms.tsx  AdminJobs.tsx  AdminLlms.tsx  AdminOverview.tsx  AdminTestLlm.tsx  AdminTestVoice.tsx  AdminTopicTemplates.tsx  AdminUsers.tsx  AdminVoices.tsx  (+1 more)
frontend/src/store/: auth.ts
k8s/aidbooks/: configmap.yaml  deployment-api.yaml  deployment-frontend.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service-api.yaml  service-frontend.yaml
mold-service/: Cargo.toml  README.md
mold-service/scripts/: generate.sh  health.sh  pull.sh  test.sh  unload.sh
mold-service/src/: client.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  policy.rs  server.rs  state.rs
mold-service/tests/: integration.rs
scripts/: animate-demo.sh  animate-single-chapter.sh  deploy-k3s.sh  dev.sh  manim-install.sh
shared/: openapi.json
