[workspace]
resolver = "2"
members = ["api", "core", "db", "jobs"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout", "request-id", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# added in Phase 1
surrealdb = { version = "2", default-features = false, features = ["kv-rocksdb"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1"
figment = { version = "0.10", features = ["toml", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
mimalloc = { version = "0.1", default-features = false }
async-trait = "0.1"
futures = "0.3"

# workspace-internal
listenai-core = { path = "core" }
listenai-db = { path = "db" }
listenai-jobs = { path = "jobs" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
