[workspace]
resolver = "2"
members = ["api", "core", "db", "jobs", "mcp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "io-util", "io-std", "fs"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout", "request-id", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# added in Phase 1
surrealdb = { version = "2", default-features = false, features = ["kv-rocksdb"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1"
figment = { version = "0.10", features = ["toml", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
mimalloc = { version = "0.1", default-features = false }
async-trait = "0.1"
futures = "0.3"

# added in Phase 2
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
validator = { version = "0.18", features = ["derive"] }

# added in Phase 3
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# added in Phase 4
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
hound = "3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# added in Phase 8 (YouTube publishing): AEAD for refresh-token storage,
# percent-encoding for OAuth URL building.
chacha20poly1305 = "0.10"
form_urlencoded = "1"

# workspace-internal
listenai-core = { path = "core" }
listenai-db = { path = "db" }
listenai-jobs = { path = "jobs" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
