[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "listenai-api"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
mimalloc = { workspace = true }
futures = { workspace = true }
http = "1"
http-body-util = "0.1"
hyper = "1"
async-trait = { workspace = true }

# Phase 2 auth
jsonwebtoken = { workspace = true }
validator = { workspace = true }

# Phase 2 uses the SurrealDB types from listenai-db indirectly through helpers,
# but we also need surrealdb directly for the db query parameter bindings.
surrealdb = { workspace = true }

# Phase 3 content generation
reqwest = { workspace = true }

# Phase 4 voice synthesis
hound = { workspace = true }
base64 = { workspace = true }
tokio-util = { workspace = true }

listenai-core = { workspace = true }
listenai-db = { workspace = true }
listenai-jobs = { workspace = true }

[dev-dependencies]
tempfile = "3"
